# Stitchwork

./: .env  .env.production  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: android.yml  deploy.yml  frontend.yml  proxy.yml  publish-rig-ai-sdk.yml
crates/entity/: Cargo.toml
crates/entity/src/: chat_message.rs  chat_thread.rs  customer.rs  lib.rs  order.rs  payroll.rs  payroll_record.rs  piece_record.rs  process.rs  register_code.rs  share.rs  user.rs  workshop.rs
crates/proxy/: Cargo.toml
crates/rig-ai-sdk/: Cargo.toml  README.md
crates/rig-ai-sdk/src/: adapter.rs  convert.rs  event.rs  lib.rs  message.rs  stream.rs
crates/server/: Cargo.toml
crates/server/docs/: user-guide.md
crates/server/src/: bootstrap.rs  common.rs  error.rs  lib.rs  main.rs  s3.rs  state.rs  traits.rs
crates/server/src/chat/: ai_sdk_adapter.rs  frontend_tools.rs  knowledge_base.rs  mod.rs  request.rs  session_manager.rs
crates/server/src/mcp/: boss.rs  mod.rs  staff.rs
crates/server/src/service/: chat.rs  mod.rs
crates/server/src/service/admin/: controller.rs  dto.rs  service.rs
crates/server/src/service/auth/: controller.rs  dto.rs  jwt.rs  mod.rs  service.rs
crates/server/src/service/chat_thread/: controller.rs  dto.rs  mod.rs  service.rs
crates/server/src/service/customer/: controller.rs  dto.rs  service.rs
crates/server/src/service/home/: controller.rs  dto.rs  service.rs
crates/server/src/service/notification/: controller.rs  mod.rs
crates/server/src/service/order/: controller.rs  dto.rs  service.rs
crates/server/src/service/payroll/: controller.rs  dto.rs  service.rs
crates/server/src/service/piece_record/: controller.rs  dto.rs  service.rs
crates/server/src/service/process/: controller.rs  dto.rs  service.rs
crates/server/src/service/share/: controller.rs  dto.rs  mod.rs  service.rs
crates/server/src/service/stats/: controller.rs  dto.rs  service.rs
crates/server/src/service/upload/: controller.rs  dto.rs  mod.rs
crates/server/src/service/workshop/: dto.rs  service.rs
docs/: api.json  assistant-ui.md  database.md  design.md  flexible-data-query.md  image-upload.md  seaorm-entity-first.md  tool-ui.md  ui-components.md
docs/blog/: assistant-ui-custom-thread-list-backend.md  assistant-ui-frontend-tools.md  juejin-assistant-ui-frontend-tools.md
docs/dev-notes/: aisdk-source-analysis.md  android-cmake-ninja.md  barcode-scanner.md  biometric-auth.md  browser-compatibility.md  cancel-signal-bug.md  entity-refactor-employment.md  image-upload-optimization.md  jwt-auth.md  moka-cache.md  pingora-proxy.md  realtime-notifications.md  rig-agent-loop.md  rig-ai-sdk-optimization.md  rig-streaming-prompt-request.md  rmcp-guide.md  rmcp-transport.md  rust-2024-use-syntax.md  tauri-notification.md
docs/plans/: 2026-01-10-ai-chat-design.md  2026-01-13-rig-custom-embedding.md  2026-01-13-voice-input.md  2026-01-21-chat-history-management.md  2026-01-21-dynamic-suggestions.md  2026-01-23-frontend-tool-standard-flow.md  frontend-tools-with-rig.md
openspec/: AGENTS.md  project.md
openspec/specs/auth-ui/: spec.md
proxy/: Cargo.toml
proxy/src/: main.rs
server/: .env.example  Cargo.toml  Dockerfile
server/src/: common.rs  error.rs  main.rs  s3.rs
server/src/entity/: customer.rs  employment.rs  mod.rs  order.rs  payroll.rs  payroll_record.rs  piece_record.rs  process.rs  register_code.rs  share.rs  user.rs  worker.rs  workshop.rs
server/src/routes/: customer.rs  mod.rs  order.rs  payroll.rs  piece_record.rs  process.rs  worker.rs
server/src/service/: mod.rs
server/src/service/admin/: controller.rs  dto.rs  service.rs
server/src/service/auth/: controller.rs  dto.rs  jwt.rs  mod.rs  service.rs
server/src/service/customer/: controller.rs  dto.rs  service.rs
server/src/service/home/: controller.rs  dto.rs  mod.rs  service.rs
server/src/service/notification/: controller.rs  mod.rs
server/src/service/order/: controller.rs  dto.rs  service.rs
server/src/service/payroll/: controller.rs  dto.rs  service.rs
server/src/service/piece_record/: controller.rs  dto.rs  service.rs
server/src/service/process/: controller.rs  dto.rs  service.rs
server/src/service/share/: controller.rs  dto.rs  service.rs
server/src/service/stats/: controller.rs  dto.rs  service.rs
server/src/service/upload/: controller.rs  dto.rs  mod.rs
server/src/service/workshop/: controller.rs  dto.rs  mod.rs  service.rs
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: image.rs  lib.rs  main.rs  sse.rs
src/api/: admin.ts  auth.ts  chat.ts  client.ts  customer.ts  home.ts  index.ts  order.ts  payroll.ts  piece-record.ts  process.ts  share.ts  stats.ts  upload.ts
src/components/: Avatar.tsx  AvatarCropper.tsx  BiometricGuard.tsx  DateRangeButton.tsx  EmptyState.tsx  ImageUploader.tsx  OrderPicker.tsx  OssImage.tsx  PageHeader.tsx  RelativeTime.tsx  StatsCard.tsx  StatsGrid.tsx  StatusTag.tsx  VirtualList.tsx  attachment.tsx  dynamic-suggestions.tsx  index.ts  markdown-text.tsx  reasoning.tsx  thread-list.tsx  thread.tsx  tool-fallback.tsx  tools.tsx
src/constants/: index.ts  statuses.ts  styles.ts
src/hooks/: create-crud-hooks.ts  index.ts  use-auth.ts  use-biometric-timeout.ts  use-biometric.ts  use-customers.ts  use-date-range.ts  use-debounced-search.ts  use-infinite-list.ts  use-orders.ts  use-payrolls.ts  use-piece-records.ts  use-processes.ts  use-shares.ts  use-staff-list.ts  use-stats.ts  use-toggle-filter.ts  use-workshop-settings.ts  useNotify.ts
src/lib/: query-client.ts
src/routes/: __root.tsx  _auth.tsx  chat.tsx  index.tsx  login.tsx  register-staff.tsx  register.tsx  scan.tsx
src/stores/: app.ts  auth.ts  biometric.ts  tauriStoreState.ts
src/types/: admin.ts  api.ts  auth.ts  customer.ts  home.ts  index.ts  order.ts  payroll.ts  piece-record.ts  process.ts  share.ts  stats.ts
src/utils/: clipboard.ts  platform.ts  upload.ts
(+239 files in other folders)
