[package]
name = "stitchwork-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = [
    "typed-header",
    "routing",
    "typed-routing",
    "query",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "entity-registry",
    "schema-sync",
    "with-uuid",
    "with-chrono",
    "with-rust_decimal",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = [
    "db-postgres",
    "serde",
    "serde-with-str",
] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
jsonwebtoken = "9"
argon2 = "0.5"
strum = { version = "0.26", features = ["derive"] }
aws-sdk-s3 = "1.119.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
dashmap = "6"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
rand = "0.9"
