[package]
name = "stitchwork"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stitchwork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "time"] }
futures = "0.3"
log = "0.4"
tauri-plugin-store = "2"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
blake3 = "1.8.2"
base64 = "0.22.1"
reqwest = { version = "0.13.1", features = ["rustls", "json", "stream"] }


[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-notification = "2"
