[package]
name = "stitchwork"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stitchwork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true        # 链接时优化，大幅减小体积
codegen-units = 1 # 单线程编译，更好的优化
opt-level = "z"   # 最大程度优化体积
strip = true      # 移除符号表
panic = "abort"   # 不生成 panic 展开代码

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "time"] }
futures = "0.3"
log = "0.4"
tauri-plugin-store = "2"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json", "stream"] }
tauri-plugin-clipboard-manager = "2"


[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
