[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "entity-registry",
    "schema-sync",
    "with-uuid",
    "with-chrono",
    "with-rust_decimal",
] }
rust_decimal = { version = "1", features = [
    "db-postgres",
    "serde",
    "serde-with-str",
] }
schemars = { version = "1.2.0", features = [
    "rust_decimal1",
    "uuid1",
    "chrono04",
] }
