[package]
name = "stitchwork-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stitchwork-proxy"
path = "src/main.rs"

[dependencies]
pingora = { version = "0.6", features = ["proxy"] }
pingora-http = "0.6"
pingora-limits = "0.6"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2"
bytes = "1"
http = "1"
