[package]
name = "stitchwork-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = [
    "typed-header",
    "routing",
    "typed-routing",
    "query",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "entity-registry",
    "schema-sync",
    "with-uuid",
    "with-chrono",
    "with-rust_decimal",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = [
    "db-postgres",
    "serde",
    "serde-with-str",
] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
jsonwebtoken = "9"
argon2 = "0.5"
strum = { version = "0.26", features = ["derive"] }
aws-sdk-s3 = "1.119.0"
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }
dashmap = "6"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
rand = "0.9"
rig-core = { version = "0.29", default-features = false, features = [
    "derive",
    "reqwest-rustls",
    "rmcp",
] }
entity = { version = "0.1.0", path = "../entity" }
rig-ai-sdk = { version = "0.1.0", path = "../rig-ai-sdk", features = [
    "axum-sse",
] }
schemars = { version = "1.2.0", features = [
    "rust_decimal1",
    "uuid1",
    "chrono04",
] }
rmcp = { version = "0.13", features = ["macros", "schemars"] }
anyhow = "1.0.100"
moka = { version = "0.12.12", features = ["future"] }
